syntax = "proto3";

message ChatRequest {
	string text = 1;
}

message ChatResponse {
	string text = 1;
}

service BotVectorDB {
	rpc Query (ChatRequest) returns (ChatResponse);
}
